eda-edge-automation/engine-monitor/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-monitor
  labels:
    app: engine-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine-monitor
  template:
    metadata:
      labels:
        app: engine-monitor
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: engine-monitor
            defaultMode: 420
      containers:
      - name: engine-monitor
        image: quay.io/gbsalinetti/engine-monitor:1.0
        ports:
        - containerPort: 8080
        args:
          - '-config'
          - /app/config/config.yaml
          - '-port'
          - '8080'
          - '-ttf'
          - '1m'
          - '-rate'
          - '20'
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "16Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
