eda-edge-automation/engine-monitor/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-monitor
spec:
  selector:
    app: engine-monitor
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
